--- a/style.css
+++ b/style.css
@@ -3,3 +3,38 @@ body {
   height: 100%;
   margin: 0;
 }
+header {
+  text-align: center;
+}
+img{
+  display: block;
+  margin: 0 auto;
+}
+}
+nav a {
+  display: inline-block;
+  padding: 10 px;
+  background-color: grey;
+  text-align: center;
+}
+figcaption{
+  text-align: center;
+  font-size: 14px;
+}
+p{
+  width: 800px;
+  text-align: center;
+  margin: 10px auto;
+}
+div{
+  float: left;
+  width: 25%;
+  text-align: center;
+  background-color: red;
+}
+
+}
+
+
+
+
